--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js"
+  },"engines": {
+    "node": ">=14 <15"
   },
   "author": "",
   "license": "ISC",
